health_check/tcp-health_check/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address: { address: 0.0.0.0,port_value: 9901}

static_resources:
  listeners:
  - name: http_listener
    address:
      socket_address: { address: 0.0.0.0,port_value: 80}
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: test_route
            virtual_hosts:
            - name: web_server_1
              domains: ["*"]
              routes:
              - match: {prefix: "/"}
                route: {cluster: webservice}
          http_filter:
          - name: envoy.router
  clusters:
  - name: webservice
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: webservice
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: myservice,port_value: 80}
    health_checks:
    - timeout: 2s
      interval: 10s
      unhealthy_threshold: 2
      healthy_threshold: 2
      tcp_health_check: {}
